# snapdirect

./: .gitignore  LICENCE  README.md  babel.cfg  justfile  pyproject.toml
alembic/: env.py
alembic/versions/: 2026-03-26_initial_schema.py
i18n/: messages.pot
i18n/be/LC_MESSAGES/: messages.po
i18n/en/LC_MESSAGES/: messages.po
i18n/es/LC_MESSAGES/: messages.po
i18n/fa/LC_MESSAGES/: messages.po
i18n/ka/LC_MESSAGES/: messages.po
i18n/prs/LC_MESSAGES/: messages.po
i18n/ps/LC_MESSAGES/: messages.po
i18n/ro/LC_MESSAGES/: messages.po
i18n/ru/LC_MESSAGES/: messages.po
i18n/sv/LC_MESSAGES/: messages.po
src/: API.md  config.py  constants.py  database.py  main.py  models.py  security.py  utils.py
src/google/: client.py  config.py
src/kldscp/: client.py
src/link/: models.py  router.py
src/mirrors/: models.py  router.py  schemas.py  service.py  tasks.py
src/pangea/: client.py
src/snapshots/: client.py  config.py  models.py  router.py  schemas.py  service.py  tasks.py
src/snapshots/templates/: article-template.html.j2  article.css.j2
