[tool.poetry]
name = "snapdirect"
version = "0.0.0"
description = ""
authors = ["irl"]
readme = "README.md"
license = "BSD-2"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
babel = "^2.17"
beautifulsoup4 = "^4.13"
fastapi = "^0.115.12"
google-cloud-storage = "^3.9.0"
jinja2 = "^3.1"
lxml = "^6.0"
requests = "^2.32"
pydantic = "^2.11"
pydantic-settings = "^2.10"
pyyaml = "^6.0"
tldextract = "^5"
uvicorn = {extras = ["standard"], version = "^0.30.6"}

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.12"
pytest = "^8.4"

[tool.poetry.group.prod.dependencies]
gunicorn = "^22.0.0"
python-json-logger = "^2.0.7"
prometheus-client = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 92

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "module"

[tool.ruff]
target-version = "py312"
line-length = 92
